schema/testdata/validation_operations_unique_globally_multiple_models/schema.keel
model Profile {
    fields {
        status Text
    }

    operations {
        update updateStatus(status)
    }
}

model Order {
    fields {
        status Text
    }

    operations {
        update updateStatus(status)
    }
}