schema/testdata/errors/operations_unique_globally_multiple_models.keel
model Profile {
    fields {
        status Text
    }

    actions {
        update updateStatus(id) with (status)
    }
}

model Order {
    fields {
        status Text
    }

    actions {
        //expect-error:16:28:E004:You have duplicate actions Model:Order Name:updateStatus
        update updateStatus(id) with (status)
    }
}
